# gpu-switcher

./: Cargo.toml  LICENSE  README.md  flake.nix  package.nix
dbus/: cc.localcc.GpuSwitcher.conf
nix/: module.nix
proto/: Cargo.toml
proto/src/: lib.rs
switcher-cli/: Cargo.toml
switcher-cli/src/: main.rs
switcherd/: Cargo.toml
switcherd/src/: gpu.rs  main.rs  pci.rs
