[package]
name = "switcherd"
version = "0.1.0"
edition = "2021"

[dependencies]
proto.workspace = true

color-eyre.workspace = true
tokio.workspace = true
zbus.workspace = true
serde.workspace = true
serde_json = "1.0.149"
udev = "0.9.3"
thiserror = "2.0.18"
hex = "0.4.3"
minilsof = { version = "0.1.4", features = ["async"] }
libc = "0.2.180"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
